# first-assignment

./: config.json
backend-rust/: .gitignore  Cargo.toml  config.json.example
backend-rust/src/: config.rs  main.rs
backend-rust/src/api/: mod.rs
backend-rust/src/database/: mod.rs
ci3-backend/: index.html
ci3-backend/application/config/: database.php
ci3-backend/application/controllers/: Api.php
ci3-backend/application/core/: My_config.php
ci3-backend/application/views/: welcome_message.php
ci3-backend/assets/: index-98aa2e30.css  index-d11e5e96.js
fastprint-api-to-database/: Cargo.toml
fastprint-api-to-database/src/: main.rs
frontend/: index.html  vite.config.ts
frontend/src/: app.css  main.ts
frontend/src/lib/: Modal.svelte  Table.svelte  global-state.ts
query/: init.sql
