[package]
name = "fastprint-api-to-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres","macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
